Made conversion from PostgreSQL to Firestore, added tests